# warp-ade

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml
scripts/: capture-screenshots.mjs  repack-dmg.sh  (+5 more)
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/dmg/: 安装 warp-ade.command  安装.command  安装说明.txt
src-tauri/dmg/Install.app/Contents/: Info.plist
src-tauri/migrations/: 001_init.sql  002_projects.sql  003_conversations_project.sql  004_settings.sql  005_agent_shell.sql  006_mcp.sql  007_web_search.sql  008_subagent.sql  009_semantic_index.sql  010_tool_audit.sql  011_workspace_policy.sql  012_agent_defaults.sql  013_builtin_defaults.sql  014_provider_usage.sql
src-tauri/src/: commands.rs  error.rs  export.rs  lib.rs  main.rs  platform.rs  state.rs
src-tauri/src/agent/: audit.rs  context.rs  events.rs  history.rs  loop_runner.rs  mod.rs  parser.rs  plan_mode.rs  project_context.rs  shell_policy.rs  skills_registry.rs  subagent.rs  tool_preview.rs  tool_schema.rs  tools.rs  workspace_policy.rs
src-tauri/src/attachments/: mod.rs
src-tauri/src/import/: claude.rs  codex.rs  cursor.rs  dedupe.rs  mod.rs  projects.rs  search.rs
src-tauri/src/mcp/: builtin.rs  mod.rs
src-tauri/src/providers/: agent_stream.rs  chat.rs  mod.rs  stream.rs  test_connection.rs  usage.rs
src-tauri/src/search/: code_index.rs  embeddings.rs  mod.rs  web.rs
src-tauri/src/secrets/: local.rs  mod.rs
src-tauri/src/storage/: compression.rs  db.rs  mod.rs
src-tauri/src/workspace/: git.rs  mod.rs  paths.rs  picker.rs
(+29 files in other folders)
