[package]
name = "warp-ade"
version = "0.1.0"
description = "Local AI Development Environment"
authors = ["zhangyun"]
edition = "2021"

[lib]
name = "warp_ade_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
rusqlite_migration = "1"
zstd = "0.13"
aes-gcm = "0.10"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
futures = "0.3"
sha2 = "0.10"
hex = "0.4"
walkdir = "2"
glob = "0.3"
dirs = "6"
base64 = "0.22"
regex = "1"
